Reorganised poms to reduce duplication and enabled building post java 16 with additional --add-opens.